static/css/base.css
html {
    height: 100%;
    scroll-behavior: smooth;
}

body {
    font-family: 'Red Hat Mono', monospace;
    padding-top: 164px;
    height: 100%;
}

/* Credit -> https://css-tricks.com/a-clever-sticky-footer-technique/ */
body > footer {
    position: sticky;
    top: 100vh;
}

/* ------------------ Navigation Bar, Page and Footer */

.index-bg {
    background: url('/media/homepage-image.jpg') no-repeat center center fixed;
    background-size: cover;
    height: calc(100vh - 164px);
}

.index-bg-2 {
    background-color: rgba(111, 29, 27, 0.8);
}

.text-white {
    color: #C8C8C8 !important;
}

.main-bg {
    background-color: #6F1D1B;
}

.nav-bg {
    background-color: #631918;
    margin-right: 1.5em;
    padding: 0.5em;
}

.yellow-bg {
    background-color: #866209;
}

.footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    margin-top: 260px;
}

.copyright {
    font-size: x-small;
}

/* ------------------ Body */

.ft-sm {
    font-size: 14px !important;
    font-family: 'Lato', sans-serif !important;
}

.ft-md {
    font-size: 16px !important;
}

/* ------------------ Cards */

.card-img-top {
    width: 100%;
    height: auto;
    object-fit: cover;
}

/* ------------------ Buttons */

.update-link,
.remove-item {
    cursor: pointer;
}

/* ------------------ Allauth Forms */

.allauth-form-inner-content {
    margin-top: 1.5rem;
}

/* ------------------ Media Queries */

/* Media query, small devices */

@media only screen and (min-width: 600px) {
    body {
        padding-top: 94px;
    }
}

/* Media query for extra small devices */
@media only screen and (max-width: 600px) {
    body {
        padding-top: 64px;
    }

    header,
    footer,
    small,
    p,
    h4 {
        font-size: small;
    }
}

